fix safari black square behind image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@
 }
 
 img#tim {
+    background-color: transparent;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -26,17 +27,14 @@ path#hola-soy-text {
     transform: translateX(10%);
 }
 
-
 path#tim-text {
     opacity: 0;
     transform: translateX(-10%);
 }
 
-
 line#hola-frontend {
     transform: translateX(-100%);
 }
-
 
 path#frontend-dev-text {
     transform: translateX(-100%);
